content styling, alt-text fixes

--- a/about.html
+++ b/about.html
@@ -485,10 +485,11 @@
 
           <!-- media item (right) -->
           <figure class="media-item circle-mask mask-outside float-r lazyload hidden">
-            <picture>            
-              <img src="images/content/img-content-subscription-services-1x1.jpg" data-src="images/content/img-content-subscription-services-1x1.jpg" class="lazyload" alt="A group of application interfaces arranged in a cool grid.">
+            <picture> 
+              <source media="(min-width: 40em)" srcset="images/content/img-content-subscription-services-1x1.jpg" class="lazyload" alt="Group of application interfaces.">           
+              <img src="images/content/img-content-subscription-services-wide.jpg" data-src="images/content/img-content-subscription-services-wide.jpg" class="lazyload" alt="Group of application interfaces.">
               <noscript>
-                <img src="images/content/img-content-subscription-services-1x1.jpg" alt="A group of application interfaces arranged in a cool grid.">
+                <img src="images/content/img-content-subscription-services-1x1.jpg" alt="Group of application interfaces.">
               </noscript>
             </picture>
             <figcaption class="figure-caption">A caption for the above image.</figcaption>
@@ -500,14 +501,15 @@
           <p class="lead mb-2">Concordus Applications is a Systems Integrator that is focused on building a connected world by offering innovative, smart and cost-effective solutions.Our products aim to automate the business processes used for various Users in industries like the Communications Channel, Retail, Health care etc. We offer end-to-end services for software design, build, maintenance and support and we work across technology domains, platforms, infrastructure and tools.</p>
           
           <!-- list & media item -->
-          <div class="row pt-1">
+          <div class="row content-row-md pt-1">
 
             <!-- media item -->
             <figure class="media-item col-md-5 pr-4 lazyload">
-              <picture>            
-                <img src="images/content/img-content-integration-team-1x1.jpg" data-src="images/content/img-content-integration-team-1x1.jpg" class="lazyload" alt="A group of application interfaces arranged in a cool grid.">
+              <picture>
+                <source media="(min-width: 48em)" srcset="images/content/img-content-value-sign-tall.jpg" class="lazyload" alt="Wooden arrow shaped road signs pointing in different directions.">            
+                <img src="images/content/img-content-value-sign-wide.jpg" data-src="images/content/img-content-value-sign-wide.jpg" class="lazyload" alt="Wooden arrow shaped road signs pointing in different directions.">
                 <noscript>
-                  <img src="images/content/img-content-integration-team-1x1.jpg" alt="A group of application interfaces arranged in a cool grid.">
+                  <img src="images/content/img-content-value-sign-1x1.jpg" alt="Wooden arrow shaped road signs pointing in different directions.">
                 </noscript>
               </picture>
               <figcaption class="figure-caption">A caption for the above image.</figcaption>
@@ -529,11 +531,12 @@
           <p class="lead mb-4">The following are the key goals that we strive for in everything we do:</p>
 
           <!-- media item (left) -->
-          <figure class="media-item float-r mw-25em pl-1 lazyload">
-            <picture>            
-              <img src="images/content/img-content-analytics.jpg" data-src="images/content/img-content-analytics.jpg" class="lazyload" alt="A group of application interfaces arranged in a cool grid.">
+          <figure class="media-item float-r mw-20em pl-2 lazyload">
+            <picture>
+              <source media="(min-width: 40em)" srcset="images/content/img-content-cogs-tall.jpg" class="lazyload" alt="">            
+              <img src="images/content/img-content-cogs-wide.jpg" data-src="images/content/img-content-cogs-wide.jpg" class="lazyload" alt="">
               <noscript>
-                <img src="images/content/img-content-analytics-1x1.jpg" alt="A group of application interfaces arranged in a cool grid.">
+                <img src="images/content/img-content-cogs-1x1.jpg" alt="">
               </noscript>
             </picture>
             <figcaption class="figure-caption">A caption for the above image.</figcaption>
