--- a/analytics.html
+++ b/analytics.html
@@ -485,9 +485,9 @@
             <!-- media item (right) -->
             <figure class="media-item circle-mask mask-outside float-r lazyload">
               <picture>            
-                <img src="images/content/img-content-subscription-services-1x1.jpg" data-src="images/content/img-content-subscription-services-1x1.jpg" class="lazyload" alt="A group of application interfaces arranged in a cool grid.">
+                <img src="images/content/img-content-subscription-services-1x1.jpg" data-src="images/content/img-content-subscription-services-1x1.jpg" class="lazyload" alt="Group of application interfaces.">
                 <noscript>
-                  <img src="images/content/img-content-subscription-services-1x1.jpg" alt="A group of application interfaces arranged in a cool grid.">
+                  <img src="images/content/img-content-subscription-services-1x1.jpg" alt="Group of application interfaces.">
                 </noscript>
               </picture>
             </figure>
@@ -519,9 +519,9 @@
                     <!-- media item -->
                     <figure class="media-item lazyload">
                       <picture>            
-                        <a href="sentiment-analysis.html"><img src="images/content/img-content-analytics-wide.jpg" data-src="images/content/img-content-analytics-wide.jpg" class="lazyload" alt="A group of application interfaces arranged in a cool grid."></a>
+                        <a href="sentiment-analysis.html"><img src="images/content/img-content-analytics-wide.jpg" data-src="images/content/img-content-analytics-wide.jpg" class="lazyload" alt="Group of application interfaces."></a>
                         <noscript>
-                          <img src="images/content/img-content-analytics-wide.jpg" alt="A group of application interfaces arranged in a cool grid.">
+                          <img src="images/content/img-content-analytics-wide.jpg" alt="Group of application interfaces.">
                         </noscript>
                       </picture>
                     </figure>
@@ -542,9 +542,9 @@
                     <!-- media item -->
                     <figure class="media-item lazyload">
                       <picture>            
-                        <a href="data-analysis.html"><img src="images/content/img-content-testing-wide.jpg" data-src="images/content/img-content-testing-wide.jpg" class="lazyload" alt="A group of application interfaces arranged in a cool grid."></a>
+                        <a href="data-analysis.html"><img src="images/content/img-content-testing-wide.jpg" data-src="images/content/img-content-testing-wide.jpg" class="lazyload" alt="Group of application interfaces."></a>
                         <noscript>
-                          <img src="images/content/img-content-testing-wide.jpg" alt="A group of application interfaces arranged in a cool grid.">
+                          <img src="images/content/img-content-testing-wide.jpg" alt="Group of application interfaces.">
                         </noscript>
                       </picture>
                     </figure>
@@ -565,9 +565,9 @@
                     <!-- media item -->
                     <figure class="media-item lazyload">
                       <picture>            
-                        <a href="data-analysis.html"><img src="images/content/img-content-integration-team-wide.jpg" data-src="images/content/img-content-integration-team-wide.jpg" class="lazyload" alt="A group of application interfaces arranged in a cool grid."></a>
+                        <a href="data-analysis.html"><img src="images/content/img-content-integration-team-wide.jpg" data-src="images/content/img-content-integration-team-wide.jpg" class="lazyload" alt="Group of application interfaces."></a>
                         <noscript>
-                          <img src="images/content/img-content-integration-team-wide.jpg" alt="A group of application interfaces arranged in a cool grid.">
+                          <img src="images/content/img-content-integration-team-wide.jpg" alt="Group of application interfaces.">
                         </noscript>
                       </picture>
                     </figure>
@@ -586,9 +586,9 @@
                     <!-- media item -->
                     <figure class="media-item lazyload">
                       <picture>            
-                        <a href="real-time-analytics.html"><img src="images/content/img-content-app-user-01-wide.jpg" data-src="images/content/img-content-app-user-01-wide.jpg" class="lazyload" alt="A group of application interfaces arranged in a cool grid."></a>
+                        <a href="real-time-analytics.html"><img src="images/content/img-content-app-user-01-wide.jpg" data-src="images/content/img-content-app-user-01-wide.jpg" class="lazyload" alt="Group of application interfaces."></a>
                         <noscript>
-                          <img src="images/content/img-content-app-user-01-wide.jpg" alt="A group of application interfaces arranged in a cool grid.">
+                          <img src="images/content/img-content-app-user-01-wide.jpg" alt="Group of application interfaces.">
                         </noscript>
                       </picture>
                     </figure>
