--- a/offerings.html
+++ b/offerings.html
@@ -486,9 +486,9 @@
             <!-- media item (right) -->
             <figure class="media-item mw-20em float-r lazyload">
               <picture>            
-                <img src="images/content/img-content-testing.jpg" data-src="images/content/img-content-testing.jpg" class="lazyload" alt="A group of application interfaces arranged in a cool grid.">
+                <img src="images/content/img-content-testing.jpg" data-src="images/content/img-content-testing.jpg" class="lazyload" alt="Group of application interfaces.">
                 <noscript>
-                  <img src="images/content/img-content-testing-1x1.jpg" alt="A group of application interfaces arranged in a cool grid.">
+                  <img src="images/content/img-content-testing-1x1.jpg" alt="Group of application interfaces.">
                 </noscript>
               </picture>
             </figure>
@@ -513,9 +513,9 @@
             <!-- media item (right) -->
             <figure class="media-item mw-20em float-r lazyload">
               <picture>            
-                <img src="images/content/img-content-analytics.jpg" data-src="images/content/img-content-analytics.jpg" class="lazyload" alt="A group of application interfaces arranged in a cool grid.">
+                <img src="images/content/img-content-analytics.jpg" data-src="images/content/img-content-analytics.jpg" class="lazyload" alt="Group of application interfaces.">
                 <noscript>
-                  <img src="images/content/img-content-analytics-1x1.jpg" alt="A group of application interfaces arranged in a cool grid.">
+                  <img src="images/content/img-content-analytics-1x1.jpg" alt="Group of application interfaces.">
                 </noscript>
               </picture>
             </figure>
