--- a/product-technologies.html
+++ b/product-technologies.html
@@ -486,9 +486,9 @@
             <!-- media item (right) -->
             <figure class="media-item mw-20em float-r lazyload">
               <picture>            
-                <img src="images/content/img-content-subscription-services.jpg" data-src="images/content/img-content-subscription-services.jpg" class="lazyload" alt="A group of application interfaces arranged in a cool grid.">
+                <img src="images/content/img-content-subscription-services.jpg" data-src="images/content/img-content-subscription-services.jpg" class="lazyload" alt="Group of application interfaces.">
                 <noscript>
-                  <img src="images/content/img-content-subscription-services-1x1.jpg" alt="A group of application interfaces arranged in a cool grid.">
+                  <img src="images/content/img-content-subscription-services-1x1.jpg" alt="Group of application interfaces.">
                 </noscript>
               </picture>
             </figure>
@@ -511,9 +511,9 @@
             <!-- media item (right) -->
             <figure class="media-item mw-20em float-r lazyload">
               <picture>            
-                <img src="images/content/img-content-analytics.jpg" data-src="images/content/img-content-analytics.jpg" class="lazyload" alt="A group of application interfaces arranged in a cool grid.">
+                <img src="images/content/img-content-analytics.jpg" data-src="images/content/img-content-analytics.jpg" class="lazyload" alt="Group of application interfaces.">
                 <noscript>
-                  <img src="images/content/img-content-analytics-1x1.jpg" alt="A group of application interfaces arranged in a cool grid.">
+                  <img src="images/content/img-content-analytics-1x1.jpg" alt="Group of application interfaces.">
                 </noscript>
               </picture>
             </figure>
