--- a/sentiment-analysis.html
+++ b/sentiment-analysis.html
@@ -486,9 +486,9 @@
             <!-- media item (right) -->
             <figure class="media-item circle-mask mask-outside float-r lazyload">
               <picture>            
-                <img src="images/content/img-content-integration-team-1x1.jpg" data-src="images/content/img-content-integration-team-1x1.jpg" class="lazyload" alt="A group of application interfaces arranged in a cool grid.">
+                <img src="images/content/img-content-integration-team-1x1.jpg" data-src="images/content/img-content-integration-team-1x1.jpg" class="lazyload" alt="Group of application interfaces.">
                 <noscript>
-                  <img src="images/content/img-content-integration-team-1x1.jpg" alt="A group of application interfaces arranged in a cool grid.">
+                  <img src="images/content/img-content-integration-team-1x1.jpg" alt="Group of application interfaces.">
                 </noscript>
               </picture>
             </figure>
@@ -502,9 +502,9 @@
             <!-- media item (full) -->
             <figure class="media-item pt-pb-1 w-100 lazyload">
               <picture>            
-                <img src="images/content/img-content-app-user-01-wide.jpg" data-src="images/content/img-content-app-user-01-wide.jpg" class="lazyload" alt="A group of application interfaces arranged in a cool grid.">
+                <img src="images/content/img-content-app-user-01-wide.jpg" data-src="images/content/img-content-app-user-01-wide.jpg" class="lazyload" alt="Group of application interfaces.">
                 <noscript>
-                  <img src="images/content/img-content-app-user-01-wide.jpg" alt="A group of application interfaces arranged in a cool grid.">
+                  <img src="images/content/img-content-app-user-01-wide.jpg" alt="Group of application interfaces.">
                 </noscript>
               </picture>
               <figcaption class="figure-caption">A caption for the above image.</figcaption>
@@ -527,9 +527,9 @@
             <!-- media item (right) -->
             <figure class="media-item circle-mask mask-outside float-r lazyload">
               <picture>            
-                <img src="images/content/img-content-testing-1x1.jpg" data-src="images/content/img-content-testing-1x1.jpg" class="lazyload" alt="A group of application interfaces arranged in a cool grid.">
+                <img src="images/content/img-content-testing-1x1.jpg" data-src="images/content/img-content-testing-1x1.jpg" class="lazyload" alt="Group of application interfaces.">
                 <noscript>
-                  <img src="images/content/img-content-testing-1x1.jpg" alt="A group of application interfaces arranged in a cool grid.">
+                  <img src="images/content/img-content-testing-1x1.jpg" alt="Group of application interfaces.">
                 </noscript>
               </picture>
             </figure>
