--- a/subscription-services-1.html
+++ b/subscription-services-1.html
@@ -494,10 +494,10 @@
             <!-- Page Media -->
             <figure class="media-item mb-0 lazyload">
               <picture>
-                <source media="(min-width: 40em)" srcset="images/content/img-content-subscription-services.jpg" class="lazyload" alt="A group of application interfaces arranged in a cool grid.">              
-                <img src="images/content/img-content-subscription-services-wide.jpg" data-src="images/content/img-content-subscription-services-wide.jpg" class="lazyload" alt="A group of application interfaces arranged in a cool grid.">
+                <source media="(min-width: 40em)" srcset="images/content/img-content-subscription-services.jpg" class="lazyload" alt="Group of application interfaces.">              
+                <img src="images/content/img-content-subscription-services-wide.jpg" data-src="images/content/img-content-subscription-services-wide.jpg" class="lazyload" alt="Group of application interfaces.">
                 <noscript>
-                  <img src="images/content/img-content-subscription-services-1x1.jpg" alt="A group of application interfaces arranged in a cool grid.">
+                  <img src="images/content/img-content-subscription-services-1x1.jpg" alt="Group of application interfaces.">
                 </noscript>
               </picture>
             </figure>
