--- a/MASTER-content.html
+++ b/MASTER-content.html
@@ -516,10 +516,10 @@
             <!-- use 1x1 sized images when using circle mask -->
             <figure class="media-item circle-mask mask-outside float-r lazyload">
             <picture>
-              <source media="(min-width: 40em)" srcset="images/content/img-content-subscription-services-1x1.jpg" class="lazyload" alt="A group of application interfaces arranged in a cool grid.">
-              <img srcset="images/content/img-content-subscription-services-wide.jpg" data-srcset="images/content/img-content-subscription-services-wide.jpg" class="lazyload" alt="A group of application interfaces arranged in a cool grid.">
+              <source media="(min-width: 40em)" srcset="images/content/img-content-subscription-services-1x1.jpg" class="lazyload" alt="Group of application interfaces.">
+              <img srcset="images/content/img-content-subscription-services-wide.jpg" data-srcset="images/content/img-content-subscription-services-wide.jpg" class="lazyload" alt="Group of application interfaces.">
                 <noscript>
-                  <img src="images/content/img-content-subscription-services-1x1.jpg" alt="A group of application interfaces arranged in a cool grid.">
+                  <img src="images/content/img-content-subscription-services-1x1.jpg" alt="Group of application interfaces.">
                 </noscript>
               </picture>
               <figcaption class="figure-caption">A caption for the above image.</figcaption>
@@ -542,10 +542,10 @@
             <!-- media item (left) -->
             <figure class="media-item circle-mask-md mask-outside float-l lazyload">
               <picture>
-                <source media="(min-width: 40em)" srcset="images/content/img-content-analytics-1x1.jpg" class="lazyload" alt="Illustration of analytical icons. Vector art.">              
-                <img src="images/content/img-content-analytics-wide.jpg" data-src="images/content/img-content-analytics-wide.jpg" class="lazyload" alt="Illustration of analytical icons. Vector art.">
+                <source media="(min-width: 40em)" srcset="images/content/img-content-analytics-1x1.jpg" class="lazyload" alt="An illustration of analytical icons.">              
+                <img src="images/content/img-content-analytics-wide.jpg" data-src="images/content/img-content-analytics-wide.jpg" class="lazyload" alt="An illustration of analytical icons.">
                 <noscript>
-                  <img src="images/content/img-content-analytics-1x1.jpg" alt="Illustration of analytical icons. Vector art.">
+                  <img src="images/content/img-content-analytics-1x1.jpg" alt="An illustration of analytical icons.">
                 </noscript>
               </picture>
               <figcaption class="figure-caption">A caption for the above image.</figcaption>
@@ -611,9 +611,9 @@
             <figure class="media-item pt-pb-1 w-100 lazyload">
               <picture>   
               <!-- <source media="(min-width: 40em)" srcset="images/content/img-content-app-user-01.jpg" class="lazyload" alt="Integration Team sitting in the office."> -->         
-                <img src="images/content/img-content-app-user-01-wide.jpg" data-src="images/content/img-content-app-user-01-wide.jpg" class="lazyload" alt="A group of application interfaces arranged in a cool grid.">
+                <img src="images/content/img-content-app-user-01-wide.jpg" data-src="images/content/img-content-app-user-01-wide.jpg" class="lazyload" alt="Group of application interfaces.">
                 <noscript>
-                  <img src="images/content/img-content-app-user-01-wide.jpg" alt="A group of application interfaces arranged in a cool grid.">
+                  <img src="images/content/img-content-app-user-01-wide.jpg" alt="Group of application interfaces.">
                 </noscript>
               </picture>
               <figcaption class="figure-caption">A caption for the above image.</figcaption>
@@ -716,9 +716,9 @@
                 <picture>
                   <!-- the breakpoint should match the col modifier size eg. "col-md" bp = 768px (48em) -->
                   <source media="(min-width: 48em)" srcset="images/content/img-content-subscription-services-1x1.jpg" class="lazyload" alt="Integration Team sitting in the office.">         
-                  <img src="images/content/img-content-subscription-services-wide.jpg" data-src="images/content/img-content-subscription-services-wide.jpg" class="lazyload" alt="A group of application interfaces arranged in a cool grid.">
+                  <img src="images/content/img-content-subscription-services-wide.jpg" data-src="images/content/img-content-subscription-services-wide.jpg" class="lazyload" alt="Group of application interfaces.">
                   <noscript>
-                    <img src="images/content/img-content-subscription-services-1x1.jpg" alt="A group of application interfaces arranged in a cool grid.">
+                    <img src="images/content/img-content-subscription-services-1x1.jpg" alt="Group of application interfaces.">
                   </noscript>
                 </picture>
                 <figcaption class="figure-caption">This is a Rounded Mask image.</figcaption>
