--- a/business-in-a-box.html
+++ b/business-in-a-box.html
@@ -486,9 +486,9 @@
             <!-- media item (right) -->
             <figure class="media-item mw-20em float-r lazyload">
               <picture>            
-                <img src="images/content/img-content-subscription-services-1x1.jpg" data-src="images/content/img-content-subscription-services-1x1.jpg" class="lazyload" alt="A group of application interfaces arranged in a cool grid.">
+                <img src="images/content/img-content-subscription-services-1x1.jpg" data-src="images/content/img-content-subscription-services-1x1.jpg" class="lazyload" alt="Group of application interfaces.">
                 <noscript>
-                  <img src="images/content/img-content-subscription-services-1x1.jpg" alt="A group of application interfaces arranged in a cool grid.">
+                  <img src="images/content/img-content-subscription-services-1x1.jpg" alt="Group of application interfaces.">
                 </noscript>
               </picture>
               <figcaption class="figure-caption">A caption for the above image.</figcaption>
@@ -506,9 +506,9 @@
             <!-- media item (left) -->
             <figure class="media-item circle-mask-md mask-outside float-l lazyload">
               <picture>            
-                <img src="images/content/img-content-app-user-01-1x1.jpg" data-src="images/content/img-content-app-user-01-1x1.jpg" class="lazyload" alt="A group of application interfaces arranged in a cool grid.">
+                <img src="images/content/img-content-app-user-01-1x1.jpg" data-src="images/content/img-content-app-user-01-1x1.jpg" class="lazyload" alt="Group of application interfaces.">
                 <noscript>
-                  <img src="images/content/img-content-app-user-01-1x1.jpg" alt="A group of application interfaces arranged in a cool grid.">
+                  <img src="images/content/img-content-app-user-01-1x1.jpg" alt="Group of application interfaces.">
                 </noscript>
               </picture>
               <figcaption class="figure-caption">A caption for the above image.</figcaption>
@@ -529,9 +529,9 @@
             <!-- media item (right) -->
             <figure class="media-item circle-mask mask-outside float-r lazyload">
               <picture>            
-                <img src="images/content/img-content-testing-1x1.jpg" data-src="images/content/img-content-testing-1x1.jpg" class="lazyload" alt="A group of application interfaces arranged in a cool grid.">
+                <img src="images/content/img-content-testing-1x1.jpg" data-src="images/content/img-content-testing-1x1.jpg" class="lazyload" alt="Group of application interfaces.">
                 <noscript>
-                  <img src="images/content/img-content-testing-1x1.jpg" alt="A group of application interfaces arranged in a cool grid.">
+                  <img src="images/content/img-content-testing-1x1.jpg" alt="Group of application interfaces.">
                 </noscript>
               </picture>
               <figcaption class="figure-caption">A caption for the above image.</figcaption>
@@ -548,9 +548,9 @@
             <!-- media item (left) -->
             <figure class="media-item circle-mask-md mask-outside float-l lazyload">
               <picture>            
-                <img src="images/content/img-content-analytics-1x1.jpg" data-src="images/content/img-content-analytics-1x1.jpg" class="lazyload" alt="A group of application interfaces arranged in a cool grid.">
+                <img src="images/content/img-content-analytics-1x1.jpg" data-src="images/content/img-content-analytics-1x1.jpg" class="lazyload" alt="Group of application interfaces.">
                 <noscript>
-                  <img src="images/content/img-content-analytics-1x1.jpg" alt="A group of application interfaces arranged in a cool grid.">
+                  <img src="images/content/img-content-analytics-1x1.jpg" alt="Group of application interfaces.">
                 </noscript>
               </picture>
               <figcaption class="figure-caption">A caption for the above image.</figcaption>
@@ -567,9 +567,9 @@
             <!-- media item (right) -->
             <figure class="media-item float-r mw-20em lazyload">
               <picture>            
-                <img src="images/content/img-content-integration-team-1x1.jpg" data-src="images/content/img-content-integration-team-1x1.jpg" class="lazyload" alt="A group of application interfaces arranged in a cool grid.">
+                <img src="images/content/img-content-integration-team-1x1.jpg" data-src="images/content/img-content-integration-team-1x1.jpg" class="lazyload" alt="Group of application interfaces.">
                 <noscript>
-                  <img src="images/content/img-content-integration-team-1x1.jpg" alt="A group of application interfaces arranged in a cool grid.">
+                  <img src="images/content/img-content-integration-team-1x1.jpg" alt="Group of application interfaces.">
                 </noscript>
               </picture>
             </figure>
