--- a/data-analysis.html
+++ b/data-analysis.html
@@ -485,9 +485,9 @@
             <!-- media item (right) -->
             <figure class="media-item circle-mask mask-outside float-r lazyload">
               <picture>            
-                <img src="images/content/img-content-app-user-01-1x1.jpg" data-src="images/content/img-content-app-user-01-1x1.jpg" class="lazyload" alt="A group of application interfaces arranged in a cool grid.">
+                <img src="images/content/img-content-app-user-01-1x1.jpg" data-src="images/content/img-content-app-user-01-1x1.jpg" class="lazyload" alt="Group of application interfaces.">
                 <noscript>
-                  <img src="images/content/img-content-app-user-01-1x1.jpg" alt="A group of application interfaces arranged in a cool grid.">
+                  <img src="images/content/img-content-app-user-01-1x1.jpg" alt="Group of application interfaces.">
                 </noscript>
               </picture>
             </figure>
@@ -503,9 +503,9 @@
             <!-- media item (full) -->
             <figure class="media-item w-100 lazyload">
               <picture>            
-                <img src="images/content/img-content-data-sets.jpg" data-src="images/content/img-content-data-sets.jpg" class="lazyload" alt="A group of application interfaces arranged in a cool grid.">
+                <img src="images/content/img-content-data-sets.jpg" data-src="images/content/img-content-data-sets.jpg" class="lazyload" alt="Group of application interfaces.">
                 <noscript>
-                  <img src="images/content/img-content-data-sets.jpg" alt="A group of application interfaces arranged in a cool grid.">
+                  <img src="images/content/img-content-data-sets.jpg" alt="Group of application interfaces.">
                 </noscript>
               </picture>
               <figcaption class="figure-caption">A caption for the above image.</figcaption>
@@ -520,9 +520,9 @@
             <!-- media item (left) -->
             <figure class="media-item float-r mw-25em lazyload">
               <picture>            
-                <img src="images/content/img-content-360.jpg" data-src="images/content/img-content-360.jpg" class="lazyload" alt="A group of application interfaces arranged in a cool grid.">
+                <img src="images/content/img-content-360.jpg" data-src="images/content/img-content-360.jpg" class="lazyload" alt="Group of application interfaces.">
                 <noscript>
-                  <img src="images/content/img-content-360-1x1.jpg" alt="A group of application interfaces arranged in a cool grid.">
+                  <img src="images/content/img-content-360-1x1.jpg" alt="Group of application interfaces.">
                 </noscript>
               </picture>
               <figcaption class="figure-caption">A caption for the above image.</figcaption>
@@ -550,9 +550,9 @@
             <!-- media item (right) -->
             <figure class="media-item float-r mw-25em lazyload">
               <picture>            
-                <img src="images/content/img-content-analytics.jpg" data-src="images/content/img-content-analytics.jpg" class="lazyload" alt="A group of application interfaces arranged in a cool grid.">
+                <img src="images/content/img-content-analytics.jpg" data-src="images/content/img-content-analytics.jpg" class="lazyload" alt="Group of application interfaces.">
                 <noscript>
-                  <img src="images/content/img-content-analytics-1x1.jpg" alt="A group of application interfaces arranged in a cool grid.">
+                  <img src="images/content/img-content-analytics-1x1.jpg" alt="Group of application interfaces.">
                 </noscript>
               </picture>
               <figcaption class="figure-caption">A caption for the above image.</figcaption>
