--- a/demo.html
+++ b/demo.html
@@ -514,9 +514,9 @@
             <!-- media item (right) -->
             <figure class="media-item circle-mask mask-outside float-r lazyload">
               <picture>            
-                <img src="images/content/img-content-subscription-services-1x1.jpg" data-src="images/content/img-content-subscription-services-1x1.jpg" class="lazyload" alt="A group of application interfaces arranged in a cool grid.">
+                <img src="images/content/img-content-subscription-services-1x1.jpg" data-src="images/content/img-content-subscription-services-1x1.jpg" class="lazyload" alt="Group of application interfaces.">
                 <noscript>
-                  <img src="images/content/img-content-subscription-services-1x1.jpg" alt="A group of application interfaces arranged in a cool grid.">
+                  <img src="images/content/img-content-subscription-services-1x1.jpg" alt="Group of application interfaces.">
                 </noscript>
               </picture>
               <figcaption class="figure-caption">A caption for the above image.</figcaption>
@@ -539,9 +539,9 @@
             <!-- media item (left) -->
             <figure class="media-item circle-mask-md mask-outside float-l lazyload">
               <picture>            
-                <img src="images/content/img-content-analytics-1x1.jpg" data-src="images/content/img-content-analytics-1x1.jpg" class="lazyload" alt="A group of application interfaces arranged in a cool grid.">
+                <img src="images/content/img-content-analytics-1x1.jpg" data-src="images/content/img-content-analytics-1x1.jpg" class="lazyload" alt="Group of application interfaces.">
                 <noscript>
-                  <img src="images/content/img-content-analytics-1x1.jpg" alt="A group of application interfaces arranged in a cool grid.">
+                  <img src="images/content/img-content-analytics-1x1.jpg" alt="Group of application interfaces.">
                 </noscript>
               </picture>
               <figcaption class="figure-caption">A caption for the above image.</figcaption>
@@ -554,9 +554,9 @@
             <!-- media item (right) -->
             <figure class="media-item float-r mw-20em lazyload">
               <picture>            
-                <img src="images/content/img-content-testing-1x1.jpg" data-src="images/content/img-content-testing-1x1.jpg" class="lazyload" alt="A group of application interfaces arranged in a cool grid.">
+                <img src="images/content/img-content-testing-1x1.jpg" data-src="images/content/img-content-testing-1x1.jpg" class="lazyload" alt="Group of application interfaces.">
                 <noscript>
-                  <img src="images/content/img-content-testing-1x1.jpg" alt="A group of application interfaces arranged in a cool grid.">
+                  <img src="images/content/img-content-testing-1x1.jpg" alt="Group of application interfaces.">
                 </noscript>
               </picture>
               <figcaption class="figure-caption">A caption for the above image.</figcaption>
@@ -605,9 +605,9 @@
             <!-- media item (full) -->
             <figure class="media-item pt-pb-1 w-100 lazyload">
               <picture>            
-                <img src="images/content/img-content-app-user-01-wide.jpg" data-src="images/content/img-content-app-user-01-wide.jpg" class="lazyload" alt="A group of application interfaces arranged in a cool grid.">
+                <img src="images/content/img-content-app-user-01-wide.jpg" data-src="images/content/img-content-app-user-01-wide.jpg" class="lazyload" alt="Group of application interfaces.">
                 <noscript>
-                  <img src="images/content/img-content-app-user-01-wide.jpg" alt="A group of application interfaces arranged in a cool grid.">
+                  <img src="images/content/img-content-app-user-01-wide.jpg" alt="Group of application interfaces.">
                 </noscript>
               </picture>
               <figcaption class="figure-caption">A caption for the above image.</figcaption>
@@ -633,9 +633,9 @@
               <!-- media item -->
               <figure class="media-item col-md-5 pr-2 lazyload">
                 <picture>            
-                  <img src="images/content/img-content-integration-team.jpg" data-src="images/content/img-content-integration-team.jpg" class="lazyload" alt="A group of application interfaces arranged in a cool grid.">
+                  <img src="images/content/img-content-integration-team.jpg" data-src="images/content/img-content-integration-team.jpg" class="lazyload" alt="Group of application interfaces.">
                   <noscript>
-                    <img src="images/content/img-content-integration-team-1x1.jpg" alt="A group of application interfaces arranged in a cool grid.">
+                    <img src="images/content/img-content-integration-team-1x1.jpg" alt="Group of application interfaces.">
                   </noscript>
                 </picture>
                 <figcaption class="figure-caption">A caption for the above image.</figcaption>
@@ -706,9 +706,9 @@
               <!-- media item -->
               <figure class="media-item rounded-mask col-md-4 p-0 lazyload">
                 <picture>            
-                  <img src="images/content/img-content-subscription-services-1x1.jpg" data-src="images/content/img-content-subscription-services-1x1.jpg" class="lazyload" alt="A group of application interfaces arranged in a cool grid.">
+                  <img src="images/content/img-content-subscription-services-1x1.jpg" data-src="images/content/img-content-subscription-services-1x1.jpg" class="lazyload" alt="Group of application interfaces.">
                   <noscript>
-                    <img src="images/content/img-content-subscription-services-1x1.jpg" alt="A group of application interfaces arranged in a cool grid.">
+                    <img src="images/content/img-content-subscription-services-1x1.jpg" alt="Group of application interfaces.">
                   </noscript>
                 </picture>
                 <figcaption class="figure-caption">This is a Rounded Mask image.</figcaption>
