--- a/enterprise-mobile-crm.html
+++ b/enterprise-mobile-crm.html
@@ -486,9 +486,9 @@
             <!-- media item (right) -->
             <figure class="media-item mw-20em float-r lazyload">
               <picture>            
-                <img src="images/content/img-content-mobile-app-01.png" data-src="images/content/img-content-mobile-app-01.png" class="lazyload" alt="A group of application interfaces arranged in a cool grid.">
+                <img src="images/content/img-content-mobile-app-01.png" data-src="images/content/img-content-mobile-app-01.png" class="lazyload" alt="Group of application interfaces.">
                 <noscript>
-                  <img src="images/content/img-content-mobile-app-01.png" alt="A group of application interfaces arranged in a cool grid.">
+                  <img src="images/content/img-content-mobile-app-01.png" alt="Group of application interfaces.">
                 </noscript>
               </picture>
             </figure>
@@ -523,9 +523,9 @@
             <!-- media item (full) -->
             <figure class="media-item pb-2 w-100 lazyload">
               <picture>            
-                <img src="images/content/img-content-app-02-wide.png" data-src="images/content/img-content-app-02-wide.png" class="lazyload" alt="A group of application interfaces arranged in a cool grid.">
+                <img src="images/content/img-content-app-02-wide.png" data-src="images/content/img-content-app-02-wide.png" class="lazyload" alt="Group of application interfaces.">
                 <noscript>
-                  <img src="images/content/img-content-app-01-wide.png" alt="A group of application interfaces arranged in a cool grid.">
+                  <img src="images/content/img-content-app-01-wide.png" alt="Group of application interfaces.">
                 </noscript>
               </picture>
             </figure>
@@ -535,9 +535,9 @@
             <!-- media item (right) -->
             <figure class="media-item mw-25em float-r lazyload">
               <picture>            
-                <img src="images/content/img-content-analytics.jpg" data-src="images/content/img-content-analytics.jpg" class="lazyload" alt="A group of application interfaces arranged in a cool grid.">
+                <img src="images/content/img-content-analytics.jpg" data-src="images/content/img-content-analytics.jpg" class="lazyload" alt="Group of application interfaces.">
                 <noscript>
-                  <img src="images/content/img-content-analytics-1x1.jpg" alt="A group of application interfaces arranged in a cool grid.">
+                  <img src="images/content/img-content-analytics-1x1.jpg" alt="Group of application interfaces.">
                 </noscript>
               </picture>
               <figcaption class="figure-caption">A caption for the above image.</figcaption>
@@ -581,9 +581,9 @@
             <!-- media item (right) -->
             <figure class="media-item circle-mask mask-outside float-r lazyload">
               <picture>            
-                <img src="images/content/img-content-app-user-01-1x1.jpg" data-src="images/content/img-content-app-user-01-1x1.jpg" class="lazyload" alt="A group of application interfaces arranged in a cool grid.">
+                <img src="images/content/img-content-app-user-01-1x1.jpg" data-src="images/content/img-content-app-user-01-1x1.jpg" class="lazyload" alt="Group of application interfaces.">
                 <noscript>
-                  <img src="images/content/img-content-app-user-01-1x1.jpg" alt="A group of application interfaces arranged in a cool grid.">
+                  <img src="images/content/img-content-app-user-01-1x1.jpg" alt="Group of application interfaces.">
                 </noscript>
               </picture>
               <figcaption class="figure-caption">A caption for the above image.</figcaption>
