--- a/index.html
+++ b/index.html
@@ -491,10 +491,10 @@
           <div class="card card-row card-clean">
             <figure class="media-item mb-0 lazyload">
               <picture>
-                <source media="(min-width: 40em)" srcset="images/content/img-content-subscription-services.jpg" class="lazyload" alt="A group of application interfaces arranged in a cool grid.">              
-                <img src="images/content/img-content-subscription-services-wide.jpg" data-src="images/content/img-content-subscription-services-wide.jpg" class="lazyload" alt="A group of application interfaces arranged in a cool grid.">
+                <source media="(min-width: 40em)" srcset="images/content/img-content-subscription-services.jpg" class="lazyload" alt="Group of application interfaces.">              
+                <img src="images/content/img-content-subscription-services-wide.jpg" data-src="images/content/img-content-subscription-services-wide.jpg" class="lazyload" alt="Group of application interfaces.">
                 <noscript>
-                  <img src="images/content/img-content-subscription-services-1x1.jpg" alt="A group of application interfaces arranged in a cool grid.">
+                  <img src="images/content/img-content-subscription-services-1x1.jpg" alt="Group of application interfaces.">
                 </noscript>
               </picture>
             </figure>
@@ -560,10 +560,10 @@
           <div class="card card-row card-row-rev card-clean">
             <figure class="media-item mb-0 lazyload">
               <picture>
-                <source media="(min-width: 40em)" srcset="images/content/img-content-app-user-01.jpg" class="lazyload" alt="Illustration of analytical icons. Vector art.">              
-                <img src="images/content/img-content-app-user-01-wide.jpg" data-src="images/content/img-content-app-user-01-wide.jpg" class="lazyload" alt="Illustration of analytical icons. Vector art.">
+                <source media="(min-width: 40em)" srcset="images/content/img-content-app-user-01.jpg" class="lazyload" alt="An illustration of analytical icons.">              
+                <img src="images/content/img-content-app-user-01-wide.jpg" data-src="images/content/img-content-app-user-01-wide.jpg" class="lazyload" alt="An illustration of analytical icons.">
                 <noscript>
-                  <img src="images/content/img-content-app-user-01-1x1.jpg" alt="Illustration of analytical icons. Vector art.">
+                  <img src="images/content/img-content-app-user-01-1x1.jpg" alt="An illustration of analytical icons.">
                 </noscript>
               </picture>
             </figure>
