--- a/subscription-services.html
+++ b/subscription-services.html
@@ -498,9 +498,9 @@
             <!-- media item (right) -->
             <figure class="media-item circle-mask mask-outside float-r lazyload">
               <picture>            
-                <img src="images/content/img-content-subscription-services-1x1.jpg" data-src="images/content/img-content-subscription-services-1x1.jpg" class="lazyload" alt="A group of application interfaces arranged in a cool grid.">
+                <img src="images/content/img-content-subscription-services-1x1.jpg" data-src="images/content/img-content-subscription-services-1x1.jpg" class="lazyload" alt="Group of application interfaces.">
                 <noscript>
-                  <img src="images/content/img-content-subscription-services-1x1.jpg" alt="A group of application interfaces arranged in a cool grid.">
+                  <img src="images/content/img-content-subscription-services-1x1.jpg" alt="Group of application interfaces.">
                 </noscript>
               </picture>
               <figcaption class="figure-caption">A caption for the above image.</figcaption>
@@ -528,9 +528,9 @@
               <!-- media item -->
               <figure class="media-item lazyload">
                 <picture>            
-                  <img src="images/content/img-content-analytics-wide.jpg" data-src="images/content/img-content-analytics-wide.jpg" class="lazyload" alt="A group of application interfaces arranged in a cool grid.">
+                  <img src="images/content/img-content-analytics-wide.jpg" data-src="images/content/img-content-analytics-wide.jpg" class="lazyload" alt="Group of application interfaces.">
                   <noscript>
-                    <img src="images/content/img-content-analytics-wide.jpg" alt="A group of application interfaces arranged in a cool grid.">
+                    <img src="images/content/img-content-analytics-wide.jpg" alt="Group of application interfaces.">
                   </noscript>
                 </picture>
               </figure>
@@ -551,9 +551,9 @@
               <!-- media item -->
               <figure class="media-item lazyload">
                 <picture>            
-                  <img src="images/content/img-content-testing-wide.jpg" data-src="images/content/img-content-testing-wide.jpg" class="lazyload" alt="A group of application interfaces arranged in a cool grid.">
+                  <img src="images/content/img-content-testing-wide.jpg" data-src="images/content/img-content-testing-wide.jpg" class="lazyload" alt="Group of application interfaces.">
                   <noscript>
-                    <img src="images/content/img-content-testing-wide.jpg" alt="A group of application interfaces arranged in a cool grid.">
+                    <img src="images/content/img-content-testing-wide.jpg" alt="Group of application interfaces.">
                   </noscript>
                 </picture>
               </figure>
@@ -574,9 +574,9 @@
               <!-- media item -->
               <figure class="media-item lazyload">
                 <picture>            
-                  <img src="images/content/img-content-integration-team-wide.jpg" data-src="images/content/img-content-integration-team-wide.jpg" class="lazyload" alt="A group of application interfaces arranged in a cool grid.">
+                  <img src="images/content/img-content-integration-team-wide.jpg" data-src="images/content/img-content-integration-team-wide.jpg" class="lazyload" alt="Group of application interfaces.">
                   <noscript>
-                    <img src="images/content/img-content-integration-team-wide.jpg" alt="A group of application interfaces arranged in a cool grid.">
+                    <img src="images/content/img-content-integration-team-wide.jpg" alt="Group of application interfaces.">
                   </noscript>
                 </picture>
               </figure>
@@ -597,9 +597,9 @@
               <!-- media item -->
               <figure class="media-item lazyload">
                 <picture>            
-                  <img src="images/content/img-content-app-user-01-wide.jpg" data-src="images/content/img-content-app-user-01-wide.jpg" class="lazyload" alt="A group of application interfaces arranged in a cool grid.">
+                  <img src="images/content/img-content-app-user-01-wide.jpg" data-src="images/content/img-content-app-user-01-wide.jpg" class="lazyload" alt="Group of application interfaces.">
                   <noscript>
-                    <img src="images/content/img-content-app-user-01-wide.jpg" alt="A group of application interfaces arranged in a cool grid.">
+                    <img src="images/content/img-content-app-user-01-wide.jpg" alt="Group of application interfaces.">
                   </noscript>
                 </picture>
               </figure>
