content styling, Integration page content styles

--- a/integration.html
+++ b/integration.html
@@ -485,10 +485,11 @@
 
             <!-- media item (right) -->
             <figure class="media-item circle-mask mask-outside float-r lazyload">
-              <picture>            
-                <img src="images/content/img-content-subscription-services-1x1.jpg" data-src="images/content/img-content-subscription-services-1x1.jpg" class="lazyload" alt="Group of application interfaces.">
+              <picture>
+                <source media="(min-width: 40em)" srcset="images/content/img-content-integration-apps-1x1.jpg" class="lazyload" alt="A mobile phone with illustrated application icons flying out of the screen.">
+                <img src="images/content/img-content-integration-apps-wide.jpg" data-src="images/content/img-content-integration-apps-wide.jpg" class="lazyload" alt="Group of application interfaces.">
                 <noscript>
-                  <img src="images/content/img-content-subscription-services-1x1.jpg" alt="Group of application interfaces.">
+                  <img src="images/content/img-content-integration-apps-1x1.jpg" alt="Group of application interfaces.">
                 </noscript>
               </picture>
               <figcaption class="figure-caption">A caption for the above image.</figcaption>
@@ -505,10 +506,11 @@
 
             <!-- media item (left) -->
             <figure class="media-item float-l mw-20em lazyload">
-              <picture>            
-                <img src="images/content/img-content-integration-team-1x1.jpg" data-src="images/content/img-content-integration-team-1x1.jpg" class="lazyload" alt="Group of application interfaces.">
+              <picture>
+                <source media="(min-width: 40em)" srcset="images/content/img-content-integration-team-02-1x1.jpg" class="lazyload" alt="Integration Team sitting in the office.">
+                <img src="images/content/img-content-integration-team-02-wide.jpg" data-src="images/content/img-content-integration-team-02-wide.jpg" class="lazyload" alt="Group of application interfaces.">
                 <noscript>
-                  <img src="images/content/img-content-integration-team-1x1.jpg" alt="Group of application interfaces.">
+                  <img src="images/content/img-content-integration-team-02-1x1.jpg" alt="Integration Team sitting in the office.">
                 </noscript>
               </picture>
               <figcaption class="figure-caption">A caption for the above image.</figcaption>
@@ -520,16 +522,16 @@
 
             <p>We follow Integration industry best practices to connect disparate on premise and cloud apps such as CRMs, ERPs, Payments, Office 365, Gmail, Slack, Email Marketing etc.</p>
 
-            <h2 id="integration-as-a-service" class="text-xl pt-2">Integration as a Service</h2>
+            <h2 id="integration-as-a-service" class="text-xl pt-sm">Integration as a Service</h2>
             
             <p>Our core strength is INTEGRATION and due to our in-depth experience with a huge set of integration techniques, products and methodologies, Concordus Apps offers Integration-as-a-Service of the following applications:</p>
 
             <!-- media item (full) -->
             <figure class="media-item pt-pb-1 w-100 lazyload">
-              <picture>            
-                <img src="images/content/img-content-app-user-01-wide.jpg" data-src="images/content/img-content-app-user-01-wide.jpg" class="lazyload" alt="Group of application interfaces.">
+              <picture>
+                <img src="images/content/img-content-dashboard-user-wide.jpg" data-src="images/content/img-content-dashboard-user-wide.jpg" class="lazyload" alt="Group of application interfaces.">
                 <noscript>
-                  <img src="images/content/img-content-app-user-01-wide.jpg" alt="Group of application interfaces.">
+                  <img src="images/content/img-content-dashboard-user-wide.jpg" alt="Group of application interfaces.">
                 </noscript>
               </picture>
               <figcaption class="figure-caption">A caption for the above image.</figcaption>
