Business in a Box content styles

--- a/MASTER-content.html
+++ b/MASTER-content.html
@@ -680,6 +680,18 @@
             <h4 id="page-section-four" class="pt-1">Page Section h4</h4>
 
             <p class="lead">Concordus Applications is a Systems Integrator that is focused on building a connected world by offering innovative, smart and cost-effective solutions. Innovative, smart and cost-effective software development and integration provided as a service, for Telcos and Enterprises.</p>
+
+            <!-- media item (left) -->
+            <figure class="media-item mw-25em float-l lazyload">
+              <picture>
+                <source media="(min-width: 40em)" srcset="images/content/img-content-servers-1x1.jpg" class="lazyload" alt="Row of data servers.">
+                <img src="images/content/img-content-servers-wide.jpg" data-src="images/content/img-content-servers-wide.jpg" class="lazyload" alt="Row of data servers.">
+                <noscript>
+                  <img src="images/content/img-content-servers-1x1.jpg" alt="Row of data servers.">
+                </noscript>
+              </picture>
+              <figcaption class="figure-caption">A caption for the above image.</figcaption>
+            </figure>
             
             <p>Concordus Applications is a Systems Integrator that is focused on building a connected world by offering innovative, smart and cost-effective solutions. Our products aim to automate the business processes used for various Users in industries like the Communications Channel, Retail, Health care etc. We offer end-to-end services for software design, build, maintenance and support and we work across technology domains, platforms, infrastructure and tools.</p>
 
