Secutiy as a Service content design

--- a/security-as-a-service.html
+++ b/security-as-a-service.html
@@ -485,10 +485,11 @@
 
             <!-- media item (right) -->
             <figure class="media-item mw-20em float-r lazyload">
-              <picture>            
-                <img src="images/content/img-content-subscription-services.jpg" data-src="images/content/img-content-subscription-services.jpg" class="lazyload" alt="Group of application interfaces.">
+              <picture>
+                <source media="(min-width: 40em)" srcset="images/content/img-content-security-01-1x1.jpg" class="lazyload" alt="Graphic of a padlock ontop of microchips.">
+                <img src="images/content/img-content-security-01-wide.jpg" data-src="images/content/img-content-security-01-wide.jpg" class="lazyload" alt="Graphic of a padlock ontop of microchips.">
                 <noscript>
-                  <img src="images/content/img-content-subscription-services-1x1.jpg" alt="Group of application interfaces.">
+                  <img src="images/content/img-content-security-01-tall-1x1.jpg" alt="Graphic of a padlock ontop of microchips.">
                 </noscript>
               </picture>
             </figure>
@@ -510,10 +511,11 @@
             
             <!-- media item (full) -->
             <figure class="media-item pt-pb-2 w-100 lazyload">
-              <picture>            
-                <img src="images/content/img-content-app-user-01-wide.jpg" data-src="images/content/img-content-app-user-01-wide.jpg" class="lazyload" alt="Group of application interfaces.">
+              <picture>
+                <!--<source media="(min-width: 40em)" srcset="images/content/img-content-security-dashboard-1x1.jpg" class="lazyload" alt="Dashboard user interface example.">-->
+                <img src="images/content/img-content-security-dashboard-wide.jpg" data-src="images/content/img-content-security-dashboard-wide.jpg" class="lazyload" alt="Dashboard user interface example.">
                 <noscript>
-                  <img src="images/content/img-content-app-user-01-wide.jpg" alt="Group of application interfaces.">
+                  <img src="images/content/img-content-security-dashboard-wide.jpg" alt="Dashboard user interface example.">
                 </noscript>
               </picture>
             </figure>
@@ -522,10 +524,11 @@
 
             <!-- media item (right) -->
             <figure class="media-item mw-25em float-r lazyload">
-              <picture>            
-                <img src="images/content/img-content-security-solution.jpg" data-src="images/content/img-content-security-solution.jpg" class="lazyload" alt="Group of application interfaces.">
+              <picture>
+                <!--<source media="(min-width: 40em)" srcset="images/content/img-content-security-solution-1x1.jpg" class="lazyload" alt="Concordus ecurity solutions model.">-->
+                <img src="images/content/img-content-security-solution.jpg" data-src="images/content/img-content-security-solution.jpg" class="lazyload" alt="Concordus ecurity solutions model.">
                 <noscript>
-                  <img src="images/content/img-content-security-solution-1x1.jpg" alt="Group of application interfaces.">
+                  <img src="images/content/img-content-security-solution-1x1.jpg" alt="Concordus ecurity solutions model.">
                 </noscript>
               </picture>
               <figcaption class="figure-caption">A caption for the above image.</figcaption>
