lists mixins & styles, Offerings content design

--- a/MASTER-content.html
+++ b/MASTER-content.html
@@ -633,6 +633,18 @@
 
             <a class="btn btn-text btn-xl" href="contact.html">Contact us to learn more <svg class="icon icon-outline"><use xlink:href="#icon-chevron-sm" /></svg></a>
 
+            <!-- Section Headline -->
+
+            <div class="section-headline align-center pt-pb-3">
+
+              <h2 id="solutions" class="text-xl">Section Headline</h2>
+            
+              <p class="lead mr-ml-a mw-40em">One stop shop for all your software testing needs. Cost effective digital test automation frameworks for mobile and web automation.</p>
+
+              <a class="btn btn-text btn-xl" href="services.html">Refer to our Services <svg class="icon icon-outline"><use xlink:href="#icon-chevron-sm" /></svg></a>
+
+            </div>
+
             <!-- list & media item -->
             <div class="row content-row-lg pt-1">
 
