--- a/offerings.html
+++ b/offerings.html
@@ -510,10 +510,10 @@
             <!-- media item (full) -->
             <figure class="media-item pt-pb-2 w-100 lazyload">
               <picture>
-                <source media="(min-width: 40em)" srcset="images/content/img-content-integration-apps-02-wide.jpg" class="lazyload" alt="Two hands shaking, one with a microchip pattern composited on the left person's hand.">
-                <img src="images/content/img-content-integration-apps-02-wide.jpg" data-src="images/content/img-content-integration-apps-02-wide.jpg" class="lazyload" alt="Group of application interfaces.">
+                <source media="(min-width: 40em)" srcset="images/content/img-content-integration-apps-02-wide.jpg" class="lazyload" alt="Data computer servers and a futuristic three dimentional screen.">
+                <img src="images/content/img-content-integration-apps-02-wide.jpg" data-src="images/content/img-content-integration-apps-02-wide.jpg" class="lazyload" alt="Data computer servers and a futuristic three dimentional screen.">
                 <noscript>
-                  <img src="images/content/img-content-integration-apps-02-1x1.jpg" alt="Group of application interfaces.">
+                  <img src="images/content/img-content-integration-apps-02-1x1.jpg" alt="Data computer servers and a futuristic three dimentional screen.">
                 </noscript>
               </picture>
             </figure>
