Analytics & 360 deg content design

--- a/360-degree-view.html
+++ b/360-degree-view.html
@@ -484,10 +484,11 @@
 
             <!-- media item (right) -->
             <figure class="media-item circle-mask mask-outside float-r lazyload">
-              <picture>            
-                <img src="images/content/img-content-integration-team-1x1.jpg" data-src="images/content/img-content-integration-team-1x1.jpg" class="lazyload" alt="Group of application interfaces.">
+              <picture>
+                <source media="(min-width: 40em)" srcset="images/content/img-content-customer-analysis-1x1.jpg" class="lazyload" alt="People looking over customer data spreadsheets.">
+                <img src="images/content/img-content-customer-analysis-wide.jpg" data-src="images/content/img-content-customer-analysis-wide.jpg" class="lazyload" alt="People looking over customer data spreadsheets.">
                 <noscript>
-                  <img src="images/content/img-content-integration-team-1x1.jpg" alt="Group of application interfaces.">
+                  <img src="images/content/img-content-customer-analysis-1x1.jpg" alt="People looking over customer data spreadsheets.">
                 </noscript>
               </picture>
             </figure>
@@ -500,10 +501,11 @@
 
             <!-- media item (left) -->
             <figure class="media-item float-l mw-20em lazyload">
-              <picture>            
-                <img src="images/content/img-content-testing-1x1.jpg" data-src="images/content/img-content-testing-1x1.jpg" class="lazyload" alt="Group of application interfaces.">
+              <picture>
+                <source media="(min-width: 40em)" srcset="images/content/img-content-report-sample-01-1x1.jpg" class="lazyload" alt="People looking over customer data spreadsheets.">
+                <img src="images/content/report-sample-011x1.jpg" data-src="images/content/report-sample-01-1x1.jpg" class="lazyload" alt="Group of application interfaces.">
                 <noscript>
-                  <img src="images/content/img-content-testing-1x1.jpg" alt="Group of application interfaces.">
+                  <img src="images/content/report-sample-01-1x1.jpg" alt="Group of application interfaces.">
                 </noscript>
               </picture>
               <figcaption class="figure-caption">A caption for the above image.</figcaption>
@@ -528,10 +530,11 @@
 
             <!-- media item (left) -->
             <figure class="media-item float-r mw-25em lazyload">
-              <picture>            
-                <img src="images/content/img-content-analytics.jpg" data-src="images/content/img-content-analytics.jpg" class="lazyload" alt="Group of application interfaces.">
+              <picture>
+                <source media="(min-width: 40em)" srcset="images/content/img-content-app-user-04-tall.jpg" class="lazyload" alt="People looking over customer data spreadsheets.">
+                <img src="images/content/img-content-app-user-04-wide.jpg" data-src="images/content/img-content-app-user-04-wide.jpg" class="lazyload" alt="Group of application interfaces.">
                 <noscript>
-                  <img src="images/content/img-content-analytics-1x1.jpg" alt="Group of application interfaces.">
+                  <img src="images/content/img-content-app-user-04-1x1.jpg" alt="Group of application interfaces.">
                 </noscript>
               </picture>
               <figcaption class="figure-caption">A caption for the above image.</figcaption>
