--- a/analytics.html
+++ b/analytics.html
@@ -484,10 +484,11 @@
 
             <!-- media item (right) -->
             <figure class="media-item circle-mask mask-outside float-r lazyload">
-              <picture>            
-                <img src="images/content/img-content-subscription-services-1x1.jpg" data-src="images/content/img-content-subscription-services-1x1.jpg" class="lazyload" alt="Group of application interfaces.">
+              <picture>
+                <source media="(min-width: 40em)" srcset="images/content/img-content-app-user-03-1x1.jpg" class="lazyload" alt="A person using a data analysis application.">
+                <img src="images/content/img-content-app-user-03-wide.jpg" data-src="images/content/img-content-app-user-03-wide.jpg" class="lazyload" alt="A person using a data analysis application.">
                 <noscript>
-                  <img src="images/content/img-content-subscription-services-1x1.jpg" alt="Group of application interfaces.">
+                  <img src="images/content/img-content-app-user-03-1x1.jpg" alt="A person using a data analysis application.">
                 </noscript>
               </picture>
             </figure>
@@ -505,13 +506,13 @@
 
             <div class="align-center mb-4 pt-3">
 
-              <h2 id="use-cases" class="text-xl">Some Popular Use Cases</h2>
+              <h2 id="use-cases">Some Popular Use Cases</h2>
 
             </div>
 
             <!-- Features -->
             <section class="page-content features pt-0">
-              <div class="container grid-2-col">
+              <div class="container grid-2-col pr-pl-0">
                 <!-- feature -->
                 <div class="feature">
 
